Add menu builder API (#8)
* Update Gradle and switch to Kotlin DSL

* Overhaul API with new builder system

* Add LocaleProvider

* Add maven publish plugin

* Add publishing section

* Separate ComponentReplacer to support ComponentData

* Remove legacy provider API

* Add file merging support, major API refactoring

* Add methods for adding/removing merge dirs